load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:copts.bzl", "COPTS")

cc_library(
    name = "codec",
    srcs = [
        "autocorr.c",
        "autocorr.h",
        "binary.c",
        "binary.h",
        "codebook.c",
        "decode.c",
        "encode.c",
        "encode.h",
        "error.c",
        "predictor.c",
        "predictor.h",
        "random.c",
        "random.h",
    ],
    hdrs = [
        "vadpcm.h",
    ],
    copts = COPTS,
    visibility = ["//visibility:public"],
)

cc_test(
    name = "codec_test",
    size = "small",
    srcs = [
        "decode_test.c",
        "encode_test.c",
        "predictor_test.c",
        "test.c",
        "test.h",
    ],
    copts = COPTS,
    data = [
        "data/sfx1.adpcm.aifc",
        "data/sfx1.pcm.aiff",
    ],
    deps = [
        ":codec",
    ],
)
