load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "COPTS")

cc_library(
    name = "codec",
    srcs = [
        "autocorr.c",
        "autocorr.h",
        "decode.c",
        "encode.c",
        "encode.h",
        "error.c",
        "predictor.c",
        "predictor.h",
        "random.c",
        "random.h",
    ],
    hdrs = [
        "vadpcm.h",
    ],
    copts = COPTS,
    visibility = ["//visibility:public"],
)
