load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "vadpcm",
    embed = [":vadpcm_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "vadpcm_lib",
    srcs = [
        "tests.go",
        "vadpcm.go",
    ],
    importpath = "github.com/depp/vadpcm/vadpcm",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/aiff",
        "//lib/parallel",
        "//lib/vadpcm",
        "@com_github_depp_extended//:extended",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
    ],
)
