load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "vadpcm",
    embed = [":vadpcm_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "vadpcm_lib",
    srcs = [
        "tests.go",
        "vadpcm.go",
    ],
    importpath = "github.com/depp/vadpcm/vadpcm",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/aiff",
        "//lib/parallel",
        "//lib/vadpcm",
        "@com_github_depp_extended//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
    ],
)
